产品栏目逻辑删除

--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -19,5 +19,10 @@ mybatis-plus:
       id-type: auto
       logic-delete-value: 1
       logic-not-delete-value: 0
+
 server:
   port: 10000
+
+logging:
+  level:
+    com.wz.gulimall: debug
