ali云文件上传-获取服务端签名

--- a/gulimall-coupon/src/main/resources/bootstrap.yml
+++ b/gulimall-coupon/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: localhost:8848
+        server-addr: 124.221.206.12:8848
         namespace: fc0c444f-a372-4f0e-ad72-9fffd5a0d195
         ext-config[0]:
           data-id: datasource.yml
