--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     nacos:
       discovery:
         server-addr: 124.221.206.12:8848
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
