--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -15,6 +15,7 @@
     <description>检索服务</description>
     <properties>
         <java.version>1.8</java.version>
+        <elasticsearch.version>7.4.2</elasticsearch.version>
     </properties>
     <dependencies>
         <dependency>
@@ -32,6 +33,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.4.2</version>
         </dependency>
     </dependencies>
 
