--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -15,7 +15,7 @@
     <description>谷粒商城-商品服务</description>
     <properties>
         <java.version>1.8</java.version>
-          <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,13 +38,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>com.aliyun.oss</groupId>-->
         <!--            <artifactId>aliyun-sdk-oss</artifactId>-->
         <!--            <version>3.5.0</version>-->
         <!--        </dependency>-->
-
     </dependencies>
 
     <dependencyManagement>
