--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
   redis:
     host: 124.221.206.12
     port: 6379
+  cache:
+    type: redis
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
