--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
     type: redis
     redis:
       time-to-live: 3600000
-      key-prefix: CACHE_
-      use-key-prefix: true
+#      key-prefix: CACHE_
+#      use-key-prefix: true
       cache-null-values: true
 
 mybatis-plus:
