商品检索模块

--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -38,7 +38,11 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
-        - id: gulimall_host_route
+        - id: gulimall_product_host_route
           uri: lb://gulimall-product
           predicates:
-            - Host=**.gulimall.com
+            - Host=gulimall.com
+        - id: gulimall_search_host_route
+          uri: lb://gulimall-search
+          predicates:
+            - Host=search.gulimall.com
