--- a/gulimall-coupon/src/main/resources/bootstrap.yml
+++ b/gulimall-coupon/src/main/resources/bootstrap.yml
@@ -4,17 +4,17 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 111.67.194.232:8848
-        namespace: fc0c444f-a372-4f0e-ad72-9fffd5a0d195
-        ext-config[0]:
-          data-id: datasource.yml
-          group: dev
-          refresh: true
-        ext-config[1]:
-          data-id: mybatis.yml
-          group: dev
-          refresh: true
-        ext-config[2]:
-          data-id: other.yml
-          group: dev
-          refresh: true
+        server-addr: 139.224.137.204:8848
+#        namespace: fc0c444f-a372-4f0e-ad72-9fffd5a0d195
+#        ext-config[0]:
+#          data-id: datasource.yml
+#          group: dev
+#          refresh: true
+#        ext-config[1]:
+#          data-id: mybatis.yml
+#          group: dev
+#          refresh: true
+#        ext-config[2]:
+#          data-id: other.yml
+#          group: dev
+#          refresh: true
