--- a/gulimall-product/src/main/resources/bootstrap.yml
+++ b/gulimall-product/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 111.67.194.232:8848
-        namespace: acb12868-d3c0-4fae-b78b-0d113a7677c0
+        server-addr: 139.224.137.204:8848
+#        namespace: acb12868-d3c0-4fae-b78b-0d113a7677c0
