--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
         - id: gulimall_product_host_route
           uri: lb://gulimall-product
           predicates:
-            - Host=gulimall.com
+            - Host=gulimall.com,item.gulimall.com
         - id: gulimall_search_host_route
           uri: lb://gulimall-search
           predicates:
