商品详情获取数据异步编排

--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -41,3 +41,8 @@ server:
 logging:
   level:
     com.wz.gulimall: error
+gulimall:
+  thread:
+    coreSize: 20
+    maxSize: 50
+    keepAliveTime: 10
