--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -80,6 +80,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.5.6</version>
             <optional>true</optional>
         </dependency>
 
