--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -46,3 +46,7 @@ spring:
           uri: lb://gulimall-search
           predicates:
             - Host=search.gulimall.com
+        - id: gulimall_auth_server_host_route
+          uri: lb://gulimall-auth-server
+          predicates:
+            - Host=auth.gulimall.com
