--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -71,6 +71,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>dysmsapi20170525</artifactId>
+                <version>2.0.10</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
