--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -9,4 +9,7 @@ spring:
         server-addr: 139.224.137.204:8848
   thymeleaf:
     cache: false
+  redis:
+    port: 6379
+    host: 139.224.137.204
 
