--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 20000
+  servlet:
+    session:
+      timeout: 30m
 spring:
   application:
     name: gulimall-auth-server
@@ -12,4 +15,6 @@ spring:
   redis:
     port: 6379
     host: 47.100.105.74
+  session:
+    store-type: redis
 
