--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
         <!--        <dependency>-->
         <!--            <groupId>com.aliyun.oss</groupId>-->
         <!--            <artifactId>aliyun-sdk-oss</artifactId>-->
