购物车数据存入redis数据库,如果已经存在则更新

--- a/gulimall-cart/src/main/resources/application.yml
+++ b/gulimall-cart/src/main/resources/application.yml
@@ -11,3 +11,9 @@ spring:
   redis:
     host: 47.100.105.74
     port: 6379
+
+gulimall:
+  thread:
+    coreSize: 20
+    maxSize: 50
+    keepAliveTime: 10
