--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -25,6 +25,11 @@ spring:
         acknowledge-mode: manual
   thymeleaf:
     cache: false
+  session:
+    store-type: redis
+  redis:
+    host: 47.100.105.74
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
