订单服务-异步调用获取确认信息，通过setRequestAttributes向各个异步线程传递cookie信息

--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -39,4 +39,10 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
 
+gulimall:
+  thread:
+    coreSize: 20
+    maxSize: 50
+    keepAliveTime: 10
+
 
