--- a/gulimall-ware/pom.xml
+++ b/gulimall-ware/pom.xml
@@ -43,6 +43,10 @@
             <version>2.2.3-1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
