--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -64,6 +64,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.9.28.ALL</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
