查询用户订单并跳到订单列表页面

--- a/gulimall-member/src/main/resources/application.yml
+++ b/gulimall-member/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8100
+  port: 8110
 spring:
   datasource:
     username: root
@@ -12,7 +12,13 @@ spring:
     nacos:
       discovery:
         server-addr: 47.92.0.112:8848
-
+  session:
+    store-type: redis
+  redis:
+    host: 47.92.0.112
+    port: 6379
+  thymeleaf:
+    cache: false
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
