--- a/gulimall-seckill/src/main/resources/application.yml
+++ b/gulimall-seckill/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
   redis:
     host: 47.92.0.112
     port: 6379
+
+  task:
+    scheduling:
+      pool:
+        size: 10
+    execution:
+      pool:
+        core-size: 5
+        max-size: 20
