商品秒杀-秒杀提交后放入rabbitMq队列

--- a/gulimall-seckill/src/main/resources/application.yml
+++ b/gulimall-seckill/src/main/resources/application.yml
@@ -20,3 +20,9 @@ spring:
       pool:
         core-size: 5
         max-size: 20
+  session:
+    store-type: redis
+  rabbitmq:
+    host: 47.92.0.112
+    virtual-host: /
+
