--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -7,7 +7,16 @@ spring:
     nacos:
       discovery:
         server-addr: 47.92.0.112:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   thymeleaf:
     cache: false
     suffix: .html
     prefix: classpath:/templates/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
