--- a/gulimall-cart/src/main/resources/application.yml
+++ b/gulimall-cart/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     nacos:
       discovery:
         server-addr: 47.92.0.112:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   redis:
     host: 47.92.0.112
     port: 6379
@@ -17,3 +20,12 @@ gulimall:
     coreSize: 20
     maxSize: 50
     keepAliveTime: 10
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+
+
