--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     nacos:
       discovery:
         server-addr: 47.92.0.112:8848
+  sentinel:
+    transport:
+      dashboard: localhost:8333
+
   rabbitmq:
     host: 47.92.0.112
     port: 5672
@@ -65,3 +69,8 @@ alipay:
   charset: utf-8
   gatewayUrl: https://openapi.alipaydev.com/gateway.do
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
