商品秒杀-feign、sentinel配置

--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9011
+  port: 9911
 spring:
   datasource:
     username: root
@@ -74,3 +74,7 @@ management:
     web:
       exposure:
         include: '*'
+
+feign:
+  sentinel:
+    enabled: true
