--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 13010
+  port: 14010
 spring:
   application:
     name: gulimall-search
@@ -20,3 +20,7 @@ management:
     web:
       exposure:
         include: '*'
+
+feign:
+  sentinel:
+    enabled: true
