商品秒杀-feign、sentinel配置

--- a/gulimall-member/src/main/resources/application.yml
+++ b/gulimall-member/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
     sentinel:
       transport:
         dashboard: localhost:8333
+        port: 8719
   session:
     store-type: redis
   redis:
