--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
         server-addr: 47.92.0.112:8848
     sentinel:
       transport:
+        port: 8719
         dashboard: localhost:8333
-
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
