--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=gulimall-gateway
 server.port=88
 spring.cloud.nacos.discovery.server-addr=47.92.0.112:8848
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+spring.cloud.sentinel.transport.port=8719
+
