--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -12,9 +12,10 @@ spring:
     nacos:
       discovery:
         server-addr: 47.92.0.112:8848
-  sentinel:
-    transport:
-      dashboard: localhost:8333
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8333
 
   rabbitmq:
     host: 47.92.0.112
