--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
         server-addr: 47.92.0.112:8848
     sentinel:
       transport:
+        port: 8719
         dashboard: localhost:8333
   thymeleaf:
     cache: false
