--- a/gulimall-third-party/src/main/resources/application.yml
+++ b/gulimall-third-party/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
         server-addr: 47.92.0.112:8848
     sentinel:
       transport:
+        port: 8719
         dashboard: localhost:8333
     alicloud:
       access-key: LTAI5t6NA1MMjbB7EGKKXAAW
