--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -16,6 +16,14 @@ spring:
       transport:
         port: 8719
         dashboard: localhost:8333
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://127.0.0.1:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
