--- a/gulimall-seckill/src/main/resources/application.yml
+++ b/gulimall-seckill/src/main/resources/application.yml
@@ -31,6 +31,14 @@ spring:
     virtual-host: /
   thymeleaf:
     cache: false
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://127.0.0.1:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
 
 management:
   endpoints:
