--- a/gulimall-cart/src/main/resources/application.yml
+++ b/gulimall-cart/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
   redis:
     host: 47.92.0.112
     port: 6379
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://127.0.0.1:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
 
 gulimall:
   thread:
