--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
             <version>2.1.0.RELEASE</version>
         </dependency>
+        <!--链路追踪+可视化-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
