--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.cloud.nacos.discovery.server-addr=47.92.0.112:8848
 
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 spring.cloud.sentinel.transport.port=8719
+management.endpoints.web.exposure.include='*'
 
