--- a/gulimall-member/src/main/resources/application.yml
+++ b/gulimall-member/src/main/resources/application.yml
@@ -23,6 +23,14 @@ spring:
     port: 6379
   thymeleaf:
     cache: false
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://127.0.0.1:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
