--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.9.28.ALL</version>
         </dependency>
+        <!--链路追踪+可视化-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
