--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>dysmsapi20170525</artifactId>
             <version>2.0.10</version>
         </dependency>
+        <!--链路追踪+可视化-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
